# vizier

./: .env.example  .gitignore  ANIMATION_STYLE.md  GETTING_STARTED.md  PHASE_1_SUMMARY.md  PHASE_1_TESTING.md  README.md  docker-compose.yml  pyproject.toml  test_claude_api.py  test_film_setup.py  test_film_with_images.py  test_physics_interpolation.py  test_physics_with_background.py  test_services.py
backend/: Dockerfile  requirements.txt
backend/app/: job_store.py  main.py
backend/app/models/: schemas.py
backend/app/routers/: generation.py
backend/app/services/: claude_principles_service.py  claude_service.py  claude_vision_service.py  film_service.py  frame_generator_service.py  rife_service.py  validation_service.py
backend/app/telekinesis/: __init__.py  agents.py  console.py  graph.py  logging_config.py  state.py
backend/app/workers/: celery_worker.py
docs/: ANIMATION_PRINCIPLES_KNOWLEDGE_BASE.md  ANIMATION_STYLE.md  CLAUDE.md  MODEL_COMPARISON_PLAN.md  PHASE_0_FINDINGS.md  PHASE_0_SUMMARY.md  PHASE_0_TELEKINESIS_SUMMARY.md  PHASE_1_TELEKINESIS_SUMMARY.md  PHASE_2_TELEKINESIS_SUMMARY.md  PHASE_3_PLAN.md  PHASE_3_TELEKINESIS_SUMMARY.md  TELEKINESIS_PLAN.md
docs/film/: MODEL_COMPARISON_PLAN.md  PHASE_0_FINDINGS.md  PHASE_0_SUMMARY.md  PHASE_1_SUMMARY.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Header.tsx  InstructionInput.tsx  InterpolationTimeline.tsx  PreviewCanvas.tsx  UploadSection.tsx
frontend/src/hooks/: useJobStatus.ts
scripts/: README.md  example_usage.py  generate_test_images.py  multi_frame_interpolation.py
src/: index.css
src/components/: FilePanel.tsx  Header.tsx  InterpolationTimeline.tsx  Timeline.tsx  Toolbar.tsx  UploadSection.tsx  VideoCanvas.tsx
tests/: test_object_motion.py  test_rife_physics_interpolation.py  test_rife_physics_with_background.py  test_rife_same_color_motion.py  test_same_color_motion.py  test_services.py  test_telekinesis_phase0.py  test_telekinesis_phase1.py  test_telekinesis_phase2.py  test_telekinesis_phase3.py  verify_phase0_structure.py
(+2 files in other folders)
